# IS_Validate

./: .gitignore  AGENTS.md  LICENSE  README.md  monai_version_hack.py  pyproject.toml
.github/ISSUE_TEMPLATE/: BUG-REPORT-FORM.yml  FEATURE-ISSUE-FORM.yml  TASK-ISSUE-FORM.yml  (+1 more)
exp_configs/: metrics_configs.txt  prompts_configs.txt  temp_explanation.txt
offline_dataset_handling/: check_samples.sh  check_samples_spacing.sh  convert_semantic_MSD.py  convert_semantic_MSD_CL.py  convert_to_nnunet.py  convert_to_nnunet.sh  folder_structure.txt  offline_image_manipulation.py  offline_sampling_split.py  run_convert_datasplit_to_nnunet.sh  run_dataset_corruption.sh  run_dataset_splitting.sh  run_semantic_msd.sh  run_semantic_msd_CL.sh  utils.py
offline_experiment_preprocessing/: convert_datasplit_to_nnunet.py  convert_semantic_MSD_CL.py  convert_to_nnunet.py  generate_experiment_config_json.py  offline_sampling_split.py  run_convert_datasplit_to_nnunet.sh  run_convert_to_nnunet.sh  utils.py
offline_result_summarisation/: AGENTS.md  call_summarisation_stack.sh  call_summarisation_stack_adaptive.sh  call_summarisation_stack_adaptive_zeroshot.sh  call_summarisation_stack_crossfold.sh  call_summarisation_stack_phase1.sh  comparison_plot.py  comparison_plot_run.sh  comparison_plots_sidebyside_format.py  nnUNet_metric_calculator.py  num_of_interaction.py  run_comparison_plots_sidebyside.sh  standard_metric_summarisation.py  utils.py
src/: build_app.py  export_napari_config.py  run.py  run.sh  run_planner.py  run_planner.sh  run_template.sh  version_handling.py
(+278 files in other folders)
